--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,16 @@ body {
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
+h1 {
+  text-align: center;
+}
+
 .book {
-	
   margin: 20px auto;
   padding: 20px;
   max-width: 400px;
   background-color: #ffffff;
   box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-
 }
 
 .book img {
@@ -27,7 +29,7 @@ body {
   margin: 10px;		
 }
 
-.book h3 {
+.book h2 {
   font-weight: bold;
   margin: 10px 0 5px;
 }
